public/css/main.css
html {
    width: 100%;
    height: 100%;
}

body {
    width: 100%;
    height: 100%;
    position: relative;
    font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
}

a {
    font-style: normal;
    color: #0099FF;
    text-decoration: none;
}

a:hover {
    text-decoration: underline;
}

#map {
    width: 100%;
    height: 100%;
}

#map .imageOverlay {
    position: absolute;
    top: 0;
    left: 0;
    width: 256px;
    height: 256px;
    background-color: #fff;
    opacity: 0.5;
}

#slider {
    position: absolute;
    bottom: 25px;
    left: 30px;
    right: 130px;
    height: 20px;
}

#slider.noUi-connect {
    background-color: #0099FF;
}

.mapControl {
    margin: 0 10px;
    height: 40px;
    line-height: 40px;
    text-align: center;
    box-shadow: rgba(0, 0, 0, 0.298039) 0 1px 4px -1px;
    border: none;
    background-color: #fff;
    font-family: Roboto,Arial,sans-serif;
    font-size: 24px;
    font-weight: 400;
    border-radius: 2px;
    color: #666;
    padding: 0;
}

#infoButton {
    width: 40px;
    cursor: pointer;
    margin-top: 10px;
}

.navigationButton {
    width: 40px;
    cursor: pointer;
    margin-left: 10px;
}

#renderedTime {
    margin-top: 5px;
    padding: 0;
    height: 28px;
    line-height: 28px;
    width: 160px;
    font-size: 18px;
}

#popupContainer {
    width: 100%;
    height: 100%;
    -webkit-align-items: center;
    align-items: center;
    -webkit-justify-content: center;
    justify-content: center;
    top: 0;
    left: 0;
    position: absolute;
}

.popup {
    padding: 15px 10px 20px 10px;
    box-shadow: rgba(0, 0, 0, 0.298039) 0 1px 4px -1px;
    border-radius: 2px;
    background-color: #fff;
    -webkit-align-items: center;
    align-items: center;
    -webkit-justify-content: center;
    justify-content: center;
    color: #666;
    -webkit-flex-direction: column;
    flex-direction: column;
    z-index: 100;
}

#forecastPopup {
    width: 280px;
    height: 280px;
}

#infoPopup {
    width: 80%;
    padding: 10px 15px;
    -webkit-align-items: flex-start;
    align-items: flex-start;
    max-height: 90%;
    overflow: scroll;
    font-size: 14px;
    line-height: 20px;
}

#infoPopup p {
    margin: 13px 0;
}

@media (min-width: 550px) {
    #infoPopup {
        width: 50%;
        max-width: 700px;
        padding: 10px 30px;
        height: initial;
        overflow: initial;
        font-size: 16px;
        line-height: 24px;
    }
}

@media (min-width: 550px) {
    #forecastPopup {
        width: 500px;
        height: 300px;
    }
}
#forecastPopup .forecastHeader {
    font-size: 14px;
}

#forecastPopup .forecastData {
    width: 100%;
    height: 100%;
    display: -webkit-flex;
    display: flex;
    -webkit-flex-direction: column;
    flex-direction: column;
    -webkit-align-items: center;
    align-items: center;
    -webkit-justify-content: center;
    justify-content: center;
}

#forecastPopup .forecastData .forecastChart {
    width: 100%;
    height: 100%;
}

#forecastPopup .forecastData .windDirContainer {
    -webkit-align-self: flex-end;
    align-self: flex-end;
    width: 97%;
    -webkit-justify-content: space-between;
    justify-content: space-between;
    display: -webkit-flex;
    display: flex;
    margin-top: -7px;
}

#forecastPopup .forecastData .windDirContainer .windDir {
    color: #0099FF;
    font-size: 16px;
    width: 10px;
    height: 20px;
}

@media (min-width: 550px) {
    #forecastPopup .forecastData .windDirContainer {
        width: 96%;
    }

    #forecastPopup .forecastData .windDirContainer .windDir {
        font-size: 20px;
        width: 12px;
        height: 25px;
    }
}

.spinner {
    width: 100%;
    text-align: center;
}

.spinner > div {
    width: 12px;
    height: 12px;
    background-color: #0099FF;

    border-radius: 100%;
    display: inline-block;
    -webkit-animation: sk-bouncedelay 1.4s infinite ease-in-out both;
    animation: sk-bouncedelay 1.4s infinite ease-in-out both;
}

.spinner .bounce1 {
    -webkit-animation-delay: -0.32s;
    animation-delay: -0.32s;
}

.spinner .bounce2 {
    -webkit-animation-delay: -0.16s;
    animation-delay: -0.16s;
}

@-webkit-keyframes sk-bouncedelay {
    0%, 80%, 100% { -webkit-transform: scale(0) }
    40% { -webkit-transform: scale(1.0) }
}

@keyframes sk-bouncedelay {
    0%, 80%, 100% {
        -webkit-transform: scale(0);
        transform: scale(0);
    } 40% {
        -webkit-transform: scale(1.0);
        transform: scale(1.0);
    }
}

